// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add command when g0ver does not exist 1`] = `
Array [
  "select * from g0ver where id in (U03B2AB13) and deleted_at is null",
  "insert into g0ver (created_at, id, keyword, updated_at) values (DATE, U03B2AB13, , DATE) returning id",
  "update g0ver set keyword = react, skills = [react], updated_at = DATE where deleted_at is null and id = U03B2AB13",
]
`;

exports[`add command when g0ver is existed 1`] = `
Array [
  "select * from g0ver where id in (U03B2AB13) and deleted_at is null",
  "update g0ver set keyword = video, skills = [video], updated_at = DATE where deleted_at is null and id = U03B2AB13",
]
`;

exports[`add command when g0ver skill is existed 1`] = `
Array [
  "select * from g0ver where id in (U03B2AB13) and deleted_at is null",
  "update g0ver set keyword = video rails, skills = [video,rails], updated_at = DATE where deleted_at is null and id = U03B2AB13",
]
`;
